extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo_extension__can_force_bun_instead_of_node.snap
---
source: extensions/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".moon/tasks/bun.yml\")).unwrap()"
---
tasks:
  build:
    command: bun run build
    deps:
    - ^:build
    outputs:
    - glob: dist/**/*
