extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo_extension__converts_basic_root_file.snap
---
source: extensions/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".moon/tasks/node.yml\")).unwrap()"
---
implicitInputs:
- file: '.env'
- file: tsconfig.json
- file: '.env.local'
- file: '.env'
- $GITHUB_TOKEN
tasks:
  build:
    command: npm run build
    deps:
    - ^:build
    outputs:
    - dist/**/*
    options:
      envFile: true
  dev:
    command: npm run dev
    inputs:
    - $SECRET_KEY
    options:
      cache: false
    preset: server
  test:
    command: npm run test
    deps:
    - ~:build
    inputs:
    - glob: src/**/*.tsx
      cache: true
    - glob: src/**/*.ts
      cache: true
    - glob: test/**/*.ts
      cache: true
