extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo_extension__converts_project_files-2.snap
---
source: extensions/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"client/moon.yml\")).unwrap()"
---
language: javascript
tags:
- client
tasks:
  build:
    command: yarn run build
    deps:
    - ^:build
    outputs:
    - glob: client/**/*
  typecheck:
    command: yarn run typecheck
    deps:
    - ~:build
toolchains:
  default: node
