extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo_extension__converts_project_files-3.snap
---
source: extensions/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"server/moon.yml\")).unwrap()"
---
language: typescript
tags:
- server
tasks:
  build:
    command: yarn run build
    deps:
    - ^:build
    outputs:
    - glob: server/**/*
  lint:
    command: yarn run lint
    options:
      outputStyle: buffer-only-failure
toolchains:
  default: node
